<resources>
    <string name="app_name">MesUp</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="passwordagain">Şifre Tekrar</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="veya">Veya</string>
    <string name="kayitOl">Kayıt Ol</string>
    <string name="kullaniciAdi">Kullanıcı Adı</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profil">PROFİL</string>
    <string name="profil_resmini_degistir">Profil Resmini Değiştir</string>
    <string name="Biyografi" >Biyografi </string>
</resources>