<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.KayitOlActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagesGiris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="414dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/kullaniciAdi"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/kullaniciAdiText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/passwordagain"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordTextAgain"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnKayitOL"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/girisYap"
            android:text="@string/kayitOl"
            app:cornerRadius="19dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnToLoginActiviy"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/girisYap"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="12dp"
        android:textColor="@color/kayitOlKAyitOl"/>
</androidx.constraintlayout.widget.ConstraintLayout>