<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagesGiris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"
        android:paddingTop="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:typeface="serif"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="309dp"
        android:layout_height="238dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/textEditColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_edit_design"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGirisYap"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/girisYap"
            android:text="@string/girisYap"
            app:cornerRadius="19dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <View
            android:id="@+id/divider"
            android:layout_width="180dp"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:background="@color/girisYap" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:text="@string/veya"
            android:textColor="@color/girisYap" />

        <View
            android:id="@+id/divider2"
            android:layout_width="180dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:background="@color/girisYap" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="63dp"
        android:visibility="gone"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.15">

        <Button
            android:id="@+id/btnSignInWithGoogle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sosyalMedya"
            android:paddingStart="25dp"
            app:cornerRadius="70dp"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconPadding="15dp"
            app:iconTint="@color/icon"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSignInWithFacebook"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sosyalMedya"
            android:isScrollContainer="false"
            android:paddingStart="22dp"
            app:cornerRadius="70dp"
            app:icon="@drawable/ic_facebook"
            app:iconSize="25dp"
            app:iconTint="@color/icon"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSignInWithTwiter"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sosyalMedya"
            android:paddingStart="22dp"
            app:cornerRadius="70dp"
            app:icon="@drawable/ic_twitter"
            app:iconSize="25dp"
            app:iconTint="@color/icon"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/btnKayitOlSayfaGit"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/kayitOl"
        android:textColor="@color/girisYap"
        app:cornerRadius="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

</androidx.constraintlayout.widget.ConstraintLayout>